# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/hello-ppm/: CMakeLists.txt  main.cc
src/ray-tracer/: AABB.cc  AABB.h  BVHNode.cc  BVHNode.h  CMakeLists.txt  Camera.h  HitList.cc  HitList.h  Material.h  Perlin.h  color.cc  color.h  hittable.h  main.cc  ray.h  rtmath.cc  rtmath.h  vec3.cc  vec3.h
src/ray-tracer/materials/: Dielectric.cc  Dielectric.h  Lambertian.cc  Lambertian.h  Material.h  Metallic.cc  Metallic.h
src/ray-tracer/shapes/: MovingSphere.cc  MovingSphere.h  sphere.cc  sphere.h
src/ray-tracer/textures/: Checkered.cc  Checkered.h  Noise.h  SolidColor.h  Texture.h
src/tester/: CMakeLists.txt  SceneSelector.h  main.cc
src/utils/: color.h  ray.h  vec3.h
